tests/ui/rfcs/rfc-2632-const-trait-impl/assoc-type-const-bound-usage-1.stderr
error: using `#![feature(effects)]` without enabling next trait solver globally
   |
   = note: the next trait solver must be enabled globally for the effects feature to work correctly
   = help: use `-Znext-solver` to enable

error[E0277]: the trait bound `<T as Trait>::Assoc: Trait` is not satisfied
  --> $DIR/assoc-type-const-bound-usage-1.rs:15:44
   |
LL | fn unqualified<T: const Trait>() -> Type<{ T::Assoc::func() }> {
   |                                            ^^^^^^^^ the trait `Trait` is not implemented for `<T as Trait>::Assoc`
   |
note: required by a bound in `Trait::func`
  --> $DIR/assoc-type-const-bound-usage-1.rs:7:1
   |
LL | #[const_trait]
   | ^^^^^^^^^^^^^^ required by this bound in `Trait::func`
...
LL |     fn func() -> i32;
   |        ---- required by a bound in this associated function
help: consider further restricting the associated type
   |
LL | fn unqualified<T: const Trait>() -> Type<{ T::Assoc::func() }> where <T as Trait>::Assoc: Trait {
   |                                                                ++++++++++++++++++++++++++++++++

error[E0277]: the trait bound `<T as Trait>::Assoc: Trait` is not satisfied
  --> $DIR/assoc-type-const-bound-usage-1.rs:19:42
   |
LL | fn qualified<T: const Trait>() -> Type<{ <T as Trait>::Assoc::func() }> {
   |                                          ^^^^^^^^^^^^^^^^^^^ the trait `Trait` is not implemented for `<T as Trait>::Assoc`
   |
note: required by a bound in `Trait::func`
  --> $DIR/assoc-type-const-bound-usage-1.rs:7:1
   |
LL | #[const_trait]
   | ^^^^^^^^^^^^^^ required by this bound in `Trait::func`
...
LL |     fn func() -> i32;
   |        ---- required by a bound in this associated function
help: consider further restricting the associated type
   |
LL | fn qualified<T: const Trait>() -> Type<{ <T as Trait>::Assoc::func() }> where <T as Trait>::Assoc: Trait {
   |                                                                         ++++++++++++++++++++++++++++++++

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0277`.
